[package]
name = "filters"
version = "0.1.0"
edition = "2024"

[dependencies]
data_model = { version = "0.2.0", path = "../../KappaCoder/kappa_lib/data_model" }
num-traits = "0.2.19"
processor_engine = { version = "0.2.0", path = "../../KappaCoder/kappa_lib/processor_engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
stream_proc_macro = { version = "0.1.0", path = "../../KappaCoder/kappa_lib/processor_engine/src/stream_proc_macro" }
utils = { version = "0.1.0", path = "../../KappaCoder/kappa_lib/utils" }
